tests/ui/derive/fail_validate_duplicate_wire_name.rs
#[derive(foundry::Validate)]
struct DuplicateWireNameValidate {
    #[serde(rename = "email")]
    email_address: String,
    email: String,
}

fn main() {}
